refactor：抽取主流程为task